# repomap-tool

./: .env.local  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.local  GEMINI.md  Makefile  PYDANTIC_INTEGRATION_SUMMARY.md  README.md  UPDATED_TEST_PLAN.md  debug_ast.py  debug_tree_sitter_ast.py  mypy.ini  pyproject.toml  setup.cfg  setup.py  simple_cache_inspector.py  test_signal_reception.py
.cursor/: rules
.cursor/plans/: complete-principles-implementation-02d4ecff.plan.md  inspect-density-command-503b5b09.plan.md  inspect-density-command.md  remove-aider-replace-cache.md
.cursor/rules/: always-rules-0-ai.mdc  always-rules-1-setup.mdc  always-rules-2-architecture.mdc  always-test.mdc  docs.mdc  rules-for-architecture.mdc  rules-for-docs.mdc  rules-for-python-coding.mdc  rules-for-setup.mdc  rules-for-testing.mdc  rules-for-treesitter.mdc
.github/scripts/: build-deps-image.sh  build-final-image.sh  cleanup_docker_images.sh  ensure_nightly_image.sh
.github/workflows/: ci.yml  di-lint.yml  docker-build.yml  nightly.yml  performance.yml  release.yml
api/: api_server.py  client_example.py  enhanced_client_example.py
config/: repo_map.txt
docker/: Dockerfile  Dockerfile.cpu  entrypoint.sh
docker/dev/: Dockerfile.venv  docker-compose.dev.yml
docker/prod/: Dockerfile  docker-compose-api.yml  docker-compose.yml
docker/scripts/: build.sh  entrypoint.sh  run.sh
docs/: API_GUIDE.md  CACHE_SYSTEM.md  CLI_GUIDE.md  CONFIGURATION_GUIDE.md  DEPENDENCY_ANALYSIS_GUIDE.md  DI_LINTING_GUIDE.md  DOCKER_CLI_INSTRUCTIONS.md  DOCKER_CLI_TOOL_INSTRUCTIONS.md  DOCKER_WORKFLOW_GUIDE.md  FUZZY_MATCHING_GUIDE.md  GITHUB_ACTIONS_BADGES.md  GITHUB_ACTIONS_GUIDE.md  README.md  README_INTEGRATION_SUMMARY.md  TESTING_STRATEGY.md  TREE_EXPLORATION_GUIDE.md
docs/actionplans/: README.md  architecture-refactoring.md  cli-connection-fixes.md  comprehensive_testing_implementation_plan.md  configuration-improvements.md  critical-issues.md  critical_action_plan_updated.md  dependency-management.md  edge-case-analysis.md  explore_command_ai_optimization_plan.md  future-optimizations.md  integration-tests-enhancement.md  low-coverage-modules-completion.md  master-roadmap.md  output_architecture_refactoring_plan.md  performance-improvements.md  performance_architecture_action_plan.md  phase1-tree-exploration.md  phase1b-context-awareness.md  phase2-dependency-analysis.md  phase3-llm-optimization.md  quality-testing.md  testing-strategy-overhaul.md  unit-test-coverage-analysis.md
docs/api/: README-API.md
docs/architecture/: ARCHITECTURE_DIAGRAM.md  DEVELOPMENT_GUIDE.md  HYBRID_VS_SEMANTIC_ANALYSIS.md  INTEGRATION_DIAGRAMS.md  MATCHING_ALGORITHM_GUIDE.md  PYDANTIC_INTEGRATION_SUMMARY.md  REFACTORING_GUIDE.md  REPO_ORGANIZATION_ANALYSIS.md  SEMANTIC_MATCHING_IMPLEMENTATION_GUIDE.md
docs/business/: README.md  resilience-coverage.md
docs/diagrams/: ARCHITECTURE_DIAGRAM.md  INTEGRATION_DIAGRAMS.md
docs/guides/: ADAPTIVE_SEMANTIC_INTEGRATION.md  DEVELOPMENT_GUIDE.md  EXISTING_IDENTIFIERS_GUIDE.md  FEATURE_DEVELOPMENT_GUIDE.md  FUZZY_MATCHING_IMPLEMENTATION_PLAN.md  FUZZY_MATCHING_IMPLEMENTATION_SUMMARY.md  FUZZY_MATCHING_PROPOSAL.md  LLM_TWO_PASS_STRATEGY_GUIDE.md  MATCHING_ALGORITHM_GUIDE.md  MENTIONED_IDENTS_GUIDE.md  PORTABLE_TOOL_MIGRATION.md  README-CLI.md  README-DYNAMIC.md  REPO_ORGANIZATION_ANALYSIS.md  SEMANTIC_MATCHING_IMPLEMENTATION_GUIDE.md  SIMPLE_INTEGRATION_GUIDE.md  SUCCESS_SUMMARY.md
examples/: dependency_analysis_demo.py  llm_optimization_demo.py  performance_demo.py
examples/advanced/: adaptive_vs_rigid_comparison.py  conversation_simulator.sh  feature_development_example.sh  parallel_processing_demo.py  refactoring_commands.sh  simple_hybrid_demo.py
examples/basic/: cli_examples.sh  example-usage.sh  fuzzy_matching_examples.sh  pydantic_example.py  quick_commands.sh
examples/test-project/: README.md  auth.py  test.py
examples/tree_exploration/: basic_workflow.sh
scripts/: build-docker.sh  cleanup_test_processes.sh  consolidate_config.py  consolidate_logging.py  di_linter.py  run_tests_with_cleanup.sh  setup-repomap-local.sh
scripts/dev/: check_production_readiness.sh  cleanup_docker_images.sh  run_tests.sh  test_workflows.sh
scripts/setup/: setup_venv.sh
src/: __init__.py  external_repomap.py  models.py
src/matchers/: fuzzy_matcher.py  hybrid_matcher.py
src/repomap_tool/: __init__.py  cli.py  core.py  exceptions.py  models.py  protocols.py
tests/: conftest.py  test_analyze_commands_integration.py  test_basic.py  test_inspect_commands_integration.py  test_multi_language_support.py
tests/debug/: debug_search.py
tests/integration/: README.md  integration_test_config.py  run_self_integration_tests.sh  test_centrality_ranking_consistency.py  test_cli_integration.py  test_cli_real_integration.py  test_config.py  test_density_command.py  test_dependency_components_real.py  test_docker_real_codebase.sh  test_impact_analysis_integration.py  test_inspect_commands_integration.py  test_integrated_adaptive.sh  test_integration_edge_cases.py  test_python_scm_integration.py  test_real_integration.py  test_repomap.py  test_self_integration.py  test_service_factory_integration.py  test_template_system_integration.py  test_tree_integration.py  test_venv_setup.py
tests/unit/: test_adaptive_matcher.py  test_aider_based_extractor.py  test_analyzer.py  test_basic.py  test_break_it.py  test_cache_integration.py  test_cache_manager.py  test_cli_cache.py  test_cli_commands.py  test_cli_connections.py  test_cli_core.py  test_cli_dependencies.py  test_cli_error_handling.py  test_cli_integration.py  test_cli_project_path_fix.py  test_comprehensive_python_queries.py  test_config.py  test_config_environment_precedence.py  test_configuration_edge_cases.py  test_console_manager.py  test_dependencies.py  test_di_container.py  test_edge_cases.py  test_exploration_controller_helpers.py  test_exploration_formatters.py  test_file_validator.py  test_formatter_protocols.py  test_fuzzy.py  test_fuzzy_matcher_debug.py  test_hybrid_matcher.py  test_llm_analyzer_config.py  (+14 more)
(+231 files in other folders)
